--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "matcha",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "nodemon": "^1.19.0",
-    "react-scripts": "2.1.1"
-  },
+  "name": "maktcha",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "npm start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agabrie/Matcha.git"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/agabrie/Matcha/issues"
+  },
+  "homepage": "https://github.com/agabrie/Matcha#readme"
 }
