--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maktcha",
+  "name": "matcha",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/agabrie/Matcha#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.8.1",
     "nodemon": "^2.0.2"
   }
 }
