--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "password-hash": "^1.2.2"
   }
 }
