--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/agabrie/Matcha#readme",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.8.1",
-    "nodemon": "^2.0.2",
-    "password-hash": "^1.2.2"
+    "nodemon": "^2.0.2"
   }
 }
