--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "fs": "0.0.1-security",
+    "express-fileupload": "^1.1.6",
     "express-session": "^1.17.0",
+    "fs": "0.0.1-security",
     "mongoose": "^5.8.1",
     "nodemon": "^2.0.2"
   }
