--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   "homepage": "https://github.com/agabrie/Matcha#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "bcrypt": "^3.0.7",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "mongoose": "^5.8.1",
-    "nodemon": "^2.0.2"
+    "express-session": "^1.17.1",
+    "nodemon": "^2.0.4",
+    "pg": "^8.2.1"
   }
 }
