--- a/.env
+++ b/.env
@@ -1,7 +1,26 @@
 #.env file for db info
 ## please substitute correct values
-Host=localhost
-Database=matcha
-User=postgres
-Port=5432
-Password=ASDasd123
+### default values
+
+#	database server
+DBHost		= localhost
+DBDatabase	= matcha
+DBUser		= postgres
+DBPort		= 5432
+DBPassword	= 
+
+#	server
+port		= 8000
+host		= localhost
+url			= http://localhost:8000/
+
+#client
+ClientPort	= 3000
+ClientHost	= localhost
+ClientURL	= http://localhost:3000/
+
+#	mail server
+MailService	= gmail
+MailUser	= maktcha.wethinkcode@gmail.com
+MailPass	= 
+MailFrom	= no-reply@maktcha.com
