--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
     "pg": "^8.2.1"
   }
