fixing user generation

--- a/.env
+++ b/.env
@@ -7,17 +7,17 @@ DBHost		= localhost
 DBDatabase	= matcha
 DBUser		= postgres
 DBPort		= 5432
-DBPassword	= 
+DBPassword	= ASDasd123
 
 #	server
 port		= 8000
 host		= localhost
-url			= http://localhost:8000/
+url			= http://localhost:8000
 
 #client
 ClientPort	= 3000
 ClientHost	= localhost
-ClientURL	= http://localhost:3000/
+ClientURL	= http://localhost:3000
 
 #	mail server
 MailService	= gmail
