--- a/.env
+++ b/.env
@@ -15,12 +15,12 @@ host		= localhost
 url			= http://localhost:8000
 
 #client
-ClientPort	= 3000
+ClientPort	= 3001
 ClientHost	= localhost
-ClientURL	= http://localhost:3000
+ClientURL	= http://localhost:3001
 
 #	mail server
 MailService	= gmail
-MailUser	= maktcha.wethinkcode@gmail.com
-MailPass	= 
+MailUser	= maktcha.wtc@gmail.com
+MailPass	= Maktcha123
 MailFrom	= no-reply@maktcha.com
