generates user withimages thatcan be searched on

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ DBHost        = localhost
 DBDatabase    = matcha
 DBUser        = postgres
 DBPort        = 5432
-DBPassword    = ASDasd123
+DBPassword    = Coinneach_92
 
 #    server
 port        = 8001
