views and search reformatted

--- a/.env
+++ b/.env
@@ -13,8 +13,7 @@ DBHost        = localhost
 DBDatabase    = matcha
 DBUser        = postgres
 DBPort        = 5432
-DBPassword    = Coinneach_92
-
+DBPassword    = 
 #    server
 port        = 8001
 host        = localhost
