--- a/front_end/package.json
+++ b/front_end/package.json
@@ -16,7 +16,7 @@
     "react-slick": "^0.26.1"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "react-scripts start PORT=3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
