--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
+		"ip-to-location": "^1.0.1",
+		"ipify": "^4.0.0",
 		"nodemailer": "^6.4.10",
 		"nodemon": "^2.0.4",
 		"pg": "^8.3.0"
