--- a/front_end/package.json
+++ b/front_end/package.json
@@ -17,7 +17,7 @@
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "react-slick": "^0.26.1",
     "react-emoji": "^0.5.0",
     "react-scroll-to-bottom": "^3.0.0",
