--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"ipify": "^4.0.0",
 		"nodemailer": "^6.4.10",
 		"nodemon": "^2.0.4",
-		"pg": "^8.3.0"
+		"pg": "^8.3.0",
+		"socketio": "^1.0.0"
 	}
 }
